@@ -33,12 +33,12 @@ check_char () {
   output=$2
   description=$3
   device=$4
-  printf 'checking conversion of \%s to %s (%s) on device %s' \
+  printf 'checking conversion of \\%s to %s (%s) on device %s' \
     "$sc" "$output" "$description" "$device" >&2
-  if ! printf "\\X#\\%s %s#\n" "$sc" "$desc" | "$groff" -T$device -Z \
+  if ! printf '\\X#\\%s %s#\n' "$sc" "$desc" | "$groff" -T$device -Z \
     | grep -Fqx 'x X '$output' '
   then
-    printf '...failed' >&2
+    printf '...FAILED' >&2
     fail=yes
   fi
   printf '\n' >&2
